zOMG, the bug that wouldn't die...took forever to figure this one out.  Fixed, though.

BUG: 140980

svn path=/branches/stable/extragear/multimedia/amarok/; revision=659747