src/enginecontroller.cpp
@@ -323,6 +323,7 @@ void EngineController::previous() //SLOT
 
 void EngineController::next( bool forceNext ) //SLOT
 {
+    m_previousUrl = m_bundle.url();
     m_isTiming = false;
     emit orderNext(forceNext);
 }
@@ -426,6 +427,10 @@ void EngineController::play( const MetaBundle &bundle, uint offset )
     {
         //assign bundle now so that it is available when the engine
         //emits stateChanged( Playing )
+        if( !m_bundle.url().path().isEmpty() ) //wasn't playing before
+            m_previousUrl = m_bundle.url();
+        else
+            m_previousUrl = bundle.url();
         m_bundle = bundle;
 
         if( m_engine->play( offset ) )
@@ -640,6 +645,7 @@ void EngineController::slotStreamMetaData( const MetaBundle &bundle ) //SLOT
 
     m_lastMetadata << bundle;
 
+    m_previousUrl = m_bundle.url();
     m_bundle = bundle;
     m_lastPositionOffset = m_positionOffset;
     if( m_lastFm )
@@ -649,6 +655,12 @@ void EngineController::slotStreamMetaData( const MetaBundle &bundle ) //SLOT
     newMetaDataNotify( m_bundle, false /* not a new track */ );
 }
 
+void EngineController::currentTrackMetaDataChanged( const MetaBundle& bundle )
+{
+    m_previousUrl = m_bundle.url();
+    m_bundle = bundle;
+    newMetaDataNotify( bundle, false /* no track change */ );
+}
 
 //////////////////////////////////////////////////////////////////////////////////////////
 // PRIVATE SLOTS
