src/enginecontroller.h
@@ -55,6 +55,7 @@ public:
 
     uint trackLength() const { return m_bundle.length() * 1000; }
     const MetaBundle &bundle() const;
+    KURL previousURL() const { return m_previousUrl; }
     KURL playingURL() const { return bundle().url(); }
 
     void restoreSession();
@@ -94,7 +95,7 @@ public slots:
     void playlistChanged() { m_engine->playlistChanged(); }
 
     void slotStreamMetaData( const MetaBundle &bundle );
-    void currentTrackMetaDataChanged( const MetaBundle& bundle ) { m_bundle = bundle; newMetaDataNotify( bundle, false /* no track change */ ); }
+    void currentTrackMetaDataChanged( const MetaBundle& bundle );
 
 signals:
     void orderPrevious();
@@ -124,6 +125,7 @@ private:
     EngineBase*     m_engine;
     EngineBase*     m_voidEngine;
     MetaBundle      m_bundle;
+    KURL            m_previousUrl;
     BundleList      m_lastMetadata;
     long            m_delayTime;
     int             m_muteVolume;
